--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "react-hot-toast": "^2.6.0",
+    "react-to-pdf": "^3.0.0",
     "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
